# shop_hopper

./: .gitignore  Makefile  README.md  bug_to_fix.txt  pyproject.toml
.github/workflows/: ci.yml
shop_hopper/: args_parser.py  content_fetcher.py  logger.py  parsers.py  query_generators.py  query_url_biulders.py  response_fetcher.py  response_fetchers.py  shop_hopper.py  via_selenium_content_fetcher.py  via_selenium_fetch_content.py
shop_hopper/config/: constants.py  platforms.py  platforms.yaml
shop_hopper/core/: content_fetcher.py  response_fetcher.py  shop_hopper.py  via_selenium_content_fetcher.py
shop_hopper/notebooks/: README.md  debug_parsing.ipynb
shop_hopper/parsers/: alib_parser.py  base_parser.py  bookinist_parser.py  newauction_parser.py  olx_parser.py  parsers.py  promua_parser.py  skylots_parser.py  stariyfantast_parser.py  unc_parser.py  violity_parser.py
shop_hopper/response_fetchers/: __init__.py  get_fetchers.py  post_fetchers.py  response_fetcher.py
shop_hopper/savers/: __init__.py  html_saver.py  json_saver.py  report_template.html  saver.py
shop_hopper/scripts/: app.py  shop_hopper.py
shop_hopper/templates/: report_template.html
